--- a/index.Rmd
+++ b/index.Rmd
@@ -10,19 +10,25 @@ tagList(rmarkdown::html_dependency_font_awesome())
 ```
 
 ```{r file-list, include = FALSE, warning = FALSE}
+# first this defines three functions (has_all_things, parse_yaml, ext_file,  
+# and cat_bullet)
 has_all_things <- function(y, things) {
   all(match(tolower(things), tolower(y), nomatch = 0) > 0)
 }
+
 parse_yaml <- function(file, n = 15) {
   rmarkdown:::parse_yaml_front_matter(read_lines(file, n_max = n))
 }
+
 ext_file <- function(file, ext) paste(file, ext, sep = ".")
 cat_bullet <- function(x, pattern) {
   x <- x %>% 
     filter(str_detect(basename, pattern))
   cat(x$bullet)
 }
+```
 
+```{r create-x, include = FALSE, warning = FALSE}
 x <- tibble(fls = list.files()) %>%
   mutate(basename = tools::file_path_sans_ext(fls),
          ext = tools::file_ext(fls)) %>% 
@@ -37,31 +43,35 @@ x <- x %>%
     comment = yaml %>% map_chr("comment", .null = ""),
     href = map2(ext_file(basename, "html"), title, ~ a(href = .x, .y)) %>%
       map_chr(as.character),
-    bullet = map2_chr(href, comment, ~ paste("*", .x, .y, "\n"))
-  )
+    bullet = map2_chr(href, comment, ~ paste("*", .x, .y, "\n")))
+x
 ```
 
 ### Background basics
 
 ```{r results = 'asis', echo = FALSE}
+# this uses the `bk` as a prefix and identifier for the 'background' section 
 cat_bullet(x, "^bk")
 ```
 
 ### Core purrr lessons
 
 ```{r results = 'asis', echo = FALSE}
+# here we see the 'ls' as core purrr lessons
 cat_bullet(x, "^ls")
 ```
 
 ### Worked examples
 
 ```{r results = 'asis', echo = FALSE}
+# here we see the 'ex' for exercises 
 cat_bullet(x, "^ex")
 ```
 
 ### Patterns and anti-patterns
 
 ```{r results = 'asis', echo = FALSE}
+# and the `pt` for anti-patterns
 cat_bullet(x, "^pt")
 ```
 
