--- a/mk00_rmarkdown-exercises.Rmd
+++ b/mk00_rmarkdown-exercises.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(warning = FALSE,
 
 # Objectives
 
-This document provides some exercises to improve your understanding of R Markdown. Please see the [accompanying slides](https://mjfrigaard.github.io/rep-res-rmarkdown.github.io/Index.html#1) for more information.
+This document provides some exercises to improve your understanding of R Markdown. Please see the [accompanying slides](https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html) for more information.
 
 ## Create a new R Markdown file {.tabset}
 
