--- a/bk00_functions-and-objects.Rmd
+++ b/bk00_functions-and-objects.Rmd
@@ -1,10 +1,16 @@
 ---
 title: "Introduction to R Programming"
 comment: "*functions and objects*"
-output:
-  html_document:
-    toc: true
-    toc_float: true
+output: 
+  html_document: 
+    toc: yes
+    toc_float: yes
+    toc_depth: 5
+    number_sections: yes
+    theme: flatly
+    df_print: paged
+    
+always_allow_html: true
 ---
 
 ```{r, echo = FALSE}
