--- a/bk01_workflow-best-practices.Rmd
+++ b/bk01_workflow-best-practices.Rmd
@@ -1,10 +1,16 @@
 ---
 title: "R Workflow Best Practices"
 comment: "*managing code, data, and files*"
-output:
-  html_document:
-    toc: true
-    toc_float: true
+output: 
+  html_document: 
+    toc: yes
+    toc_float: yes
+    toc_depth: 5
+    number_sections: yes
+    theme: flatly
+    df_print: paged
+    
+always_allow_html: true
 ---
 
 ```{r, echo = FALSE}
