--- a/dt01_data-trans-joins-exercises.Rmd
+++ b/dt01_data-trans-joins-exercises.Rmd
@@ -1,11 +1,14 @@
 ---
 title: "Reshaping, Transforming, and Joining Data in R"
 comment: "*transpose, pivot, split, and combine data*"
-output:
-  html_document:
-    toc: true
-    toc_float: true
-    code_folding: hide
+output: 
+  html_document: 
+    toc: yes
+    toc_float: yes
+    toc_depth: 5
+    number_sections: yes
+    code_folding: show
+    theme: flatly
     df_print: paged
     
 always_allow_html: true
