--- a/slides.Rmd
+++ b/slides.Rmd
@@ -2,7 +2,7 @@
 title: "Slides"
 ---
 
-## Slide Decks 
+### View these slide decks in your bowser of save as PDFs
 
 + [Reproducible Data Analysis With R](https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html)
 
@@ -11,4 +11,6 @@ title: "Slides"
 + [Data Reshaping in R: reshaping, transforming, and joining data in R](https://mjfrigaard.github.io/data-transformations-joins/Index.html)
 
 + [Introduction to Data Visualization with ggplot2](https://mjfrigaard.github.io/data-viz-intro/Index.html#1)
+
++ [Data Visualization as Communication](https://mjfrigaard.github.io/data-viz-as-comm/Index.html)
 
